# aoc

./: .gitignore  .gitmodules  .template  Cargo.toml  Gemfile  all  go.mod  go.sum  solve.rb  template.rs
2020/: 01.rb  02.rb  03.rb  04.rb  05.rb  06.rb  07.rb  08.rb  09.rb  10.rb
2021/: 01.rb  02.rb  03.rb  04.rb  05.rb  06.go  06.rb  07.rb  08.rb  09-basin.out  09.rb  10.rb  11.rb  12.rb  13.rb  14.rb  15.rb  16.rb  17.rb  18.rb  19.rb  20.rb  21.rb  22.rb  23.rb  24.rb  25.rb
2022/: 01.rb  02.rb  03.rb  04.rb  05.rb  06.rb  07.rb  08.rb  09.rb  10.rb  11.rb  12.rb  13.rb  14.rb  15.rb  16.rb  17.rb  18.rb  19.rb  20.rb  21.rb  22.rb  23.rb  24.rb  25.rb
2023/: 01a.rs  01b.rs  02a.rs  02b.rs  03a.rs  03b.rs  04a.rs  04b.rs  05a.rs  05b.rs  06a.rs  06b.rs  07a.rs  07b.rs  08a.rs  08b.rs  09a.rs  09b.rs  10a.rs  10b.rs  11a.rs  11b.rs  12a.rs  12b.rs  13a.rs  13b.rs  14a.rs  14b.rs  helpers.rs
algorithm/: connected-components_test.go
cmd/get-puzzle/: main.go
day01/part1/: main.go  main_test.go
day01/part2/: main.go  main_test.go
day02/part1/: main.go  main_test.go
enum/: count_test.go  flatmap_test.go  frequencies_test.go  groupby_test.go  map_test.go  minmax.go  minmax_test.go
lib/: array.rb  enumerable.rb  has_format.rb  hash.rb  math.rb  range.rb  solution_poster.rb  with_memoized_methods.rb
stream/: flatmap_test.go  frequencies_test.go  groupby_test.go  map_test.go
